--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Reports/EntityReport.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Reports/EntityReport.html
@@ -1,16 +1,22 @@
 ﻿<vr-panel ng-controller="BI_EntityReportController">
     <div class="am-collapse" ng-hide="filterSectionCollapsed">
-        <vr-form name="filterForm">
+        <vr-form name="entityfilterForm">
             <vr-row removeline>
                 <vr-columns colnum="2">
-                    <vr-select datasource="entityTypes" datatextfield="description" datavaluefield="value" label="Entity Type" selectedvalues="selectedEntityType" onselectionchanged="onchangeEntityType" isrequired hidefilterbox></vr-select>
+                    <vr-select datasource="measureTypes" datatextfield="description" datavaluefield="value" label="Measures" selectedvalues="selectedMeasureTypes" isrequired ismultipleselection hidefilterbox></vr-select>
                 </vr-columns>
                 <vr-columns colnum="2">
-                    <vr-select datasource="entitiesData" datatextfield="label" datavaluefield="value" label="Entity" selectedvalues="selectedEntity" isrequired hidefilterbox></vr-select>
+                    <vr-datetimepicker type="date" value="fromDate" label="From:" isrequired></vr-datetimepicker>
                 </vr-columns>
 
+                <vr-columns colnum="2">
+                    <vr-datetimepicker type="date" value="toDate" label="To:" isrequired></vr-datetimepicker>
+                </vr-columns>
+                <vr-columns colnum="2">
+                    <vr-select datasource="timeDimensionTypes" datatextfield="description" datavaluefield="value" label="Grouped By"
+                               selectedvalues="selectedTimeDimensionType" isrequired hidefilterbox></vr-select>
+                </vr-columns>
 
-               
             </vr-row>
             <vr-row></vr-row>
         </vr-form>
@@ -18,8 +24,18 @@
     <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
             <div transclude-to="buttons">
-                
+                <vr-button type="Search" data-onclick="search" formname="entityfilterForm"></vr-button>
+
             </div>
         </vr-actionbar>
     </vr-row>
+    <vr-row >
+        <vr-columns colnum="12">
+            <vr-datagrid datasource="data" maxheight="600px">
+                <vr-datagridcolumn headertext="'Time'" field="'dateTimeValue'"></vr-datagridcolumn>
+                <vr-datagridcolumn ng-repeat="measureType in measureTypes" headertext="measureType.description" field="'Values[' + $index + ']'" type="'Number'"></vr-datagridcolumn>
+            </vr-datagrid>
+        </vr-columns>
+    </vr-row>
+    
 </vr-panel>
