--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Traffic Statistics/ZoneMonitor.html
@@ -1,5 +1,5 @@
 ﻿
-<vr-panel ng-controller="ZoneMonitorController">
+<vr-panel ng-controller="Analytics_ZoneMonitorController">
     <vr-form name="formFilter">
         <div ng-hide="filterSectionCollapsed" vr-loader="isInitializing">
             <vr-row removeline>
