--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/UserManagement.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/UserManagement.html
@@ -1,23 +1,12 @@
 ﻿<vr-panel>
 
     <vr-form name="formFilter">
-        <div ng-hide="filterSectionCollapsed">
-            <vr-row removeline>
-                <vr-columns colnum="2">
-                    <vr-textbox value="name" label="Name"></vr-textbox>
-                </vr-columns>
-                <vr-columns colnum="2">
-                    <vr-textbox value="email" label="Email"></vr-textbox>
-                </vr-columns>
-            </vr-row>
-            <vr-row></vr-row>
-        </div>
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
                     <vr-button type="Search" formname="formFilter" data-onclick="searchClicked" isasynchronous=" true"></vr-button>
                     <vr-button type="Reset" ng-show="false"></vr-button>
-                    <button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewUser()">Add
+                    <button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewStrategy()">Add
                     <span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>
                 </div>
             </vr-actionbar>
@@ -27,7 +16,7 @@
     <div>
         <vr-row>
             <vr-columns colnum="12" simplecol>
-                <vr-datagrid datasource="users" menuactions="gridMenuActions" maxheight="400px" loadmoredata="loadMoreData" on-ready="onMainGridReady">
+                <vr-datagrid datasource="users" menuactions="gridMenuActions" maxheight="400px"  on-ready="onMainGridReady">
                     <vr-datagridcolumn headertext="'Name'" field="'Name'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Email'" field="'Email'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Status'">{{dataItem.Status == "0"? 'Not Active': 'Active' }}</vr-datagridcolumn>
