Open Entity Report Result from BI chart/report directives
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23249

--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Reports/EntityReport.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Reports/EntityReport.html
@@ -27,10 +27,13 @@
         </vr-actionbar>
     </vr-row>
     <vr-row >
-        <vr-columns colnum="12">
-            <vr-datagrid datasource="data" maxheight="600px">
+        <vr-columns colnum="12" vr-loader="isGettingData">
+            <vr-datagrid datasource="data">
                 <vr-datagridcolumn headertext="'Time'" field="'dateTimeValue'"></vr-datagridcolumn>
                 <vr-datagridcolumn ng-repeat="measureType in measureTypes" headertext="measureType.description" field="'Values[' + $index + ']'" type="'Number'"></vr-datagridcolumn>
+                <vr-datagridexpandablerow>
+                    <div ng-include="'/Client/Modules/BI/Views/Reports/EntityReportTemplates/EntityReportResult.html'"></div>
+                </vr-datagridexpandablerow>
             </vr-datagrid>
         </vr-columns>
     </vr-row>
