--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Reports/EntityReportTemplates/EntityReportResult.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Reports/EntityReportTemplates/EntityReportResult.html
@@ -16,7 +16,7 @@
             </vr-datagrid>
        
     </vr-row>
-    <vr-row ng-show="choicesGroup[selectedChoiceIndex].title=='Graphe'">
+    <vr-row ng-show="choicesGroup[selectedChoiceIndex].title=='Graph'">
         <vr-columns colnum="12">
             <vr-chart data-on-ready="chartEntityReady"></vr-chart>
         </vr-columns>
