--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Reports/EntityReportTemplates/EntityReportResult.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Reports/EntityReportTemplates/EntityReportResult.html
@@ -4,7 +4,7 @@
             <vr-choice ng-repeat="choice in choicesGroup">{{choice.title}}</vr-choice>
         </vr-choices>
     </vr-row>
-    <vr-row ng-if="choicesGroup[selectedChoiceIndex].title=='Report'">
+    <vr-row ng-show="choicesGroup[selectedChoiceIndex].title=='Report'">
        
 
             <vr-datagrid datasource="data" on-ready="gridReady">
