--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyManagement.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyManagement.html
@@ -1,11 +1,26 @@
 ﻿<vr-panel ng-controller="FraudAnalysis_StrategyManagementController">
 
     <vr-form name="formFilter">
+        <div ng-hide="filterSectionCollapsed">
+            <vr-row removeline>
+                <vr-columns colnum="2">
+                    <vr-textbox value="name" label="Name"></vr-textbox>
+                </vr-columns>
+                <vr-columns colnum="2">
+                    <vr-textbox value="description" label="Description"></vr-textbox>
+                </vr-columns>
+            </vr-row>
+            <vr-row></vr-row>
+        </div>
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
-                    <vr-button type="Search" formname="formFilter" data-onclick="searchClicked"></vr-button>
+                    <vr-button type="Search" formname="formFilter" data-onclick="searchClicked" isasynchronous=" true"></vr-button>
                     <vr-button type="Reset" ng-show="false"></vr-button>
+                    <button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewStrategy()">
+                        Add
+                        <span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+                    </button>
                 </div>
             </vr-actionbar>
         </vr-row>
@@ -14,7 +29,7 @@
     <div>
         <vr-row>
             <vr-columns colnum="12" simplecol>
-                <vr-datagrid datasource="strategies">
+                <vr-datagrid datasource="strategies" menuactions="gridMenuActions" maxheight="400px" loadmoredata="loadMoreData" on-ready="onMainGridReady">
                     <vr-datagridcolumn headertext="'Name'" field="'Name'"></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'IsDefault'">{{dataItem.IsDefault == "0"? 'Not Default': 'Default' }}</vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Description'" field="'Description'"></vr-datagridcolumn>
