--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -3,10 +3,10 @@
         <vr-form name="formStrategyEditor">
             <vr-row>
                 <vr-columns colnum="6">
-                    <vr-textbox value="name" label="Name"></vr-textbox> <!--customvalidate="CheckStrategyName"-->
+                    <vr-textbox value="name" label="Name" ng-required="true"   ></vr-textbox> <!--customvalidate="CheckStrategyName"-->
                 </vr-columns>
                 <vr-columns colnum="6">
-                    <vr-textbox value="description" label="Description"></vr-textbox>
+                    <vr-textbox value="description" label="Description" ng-required="true"></vr-textbox>
                 </vr-columns>
                 <vr-columns colnum="6">
                     <vr-switch value="isDefault" label="Is Default"></vr-switch>
