--- a/TOneV2/Code/TOneV2/TOne.Main.Web/Client/Views/RoleManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.Main.Web/Client/Views/RoleManagement.html
@@ -4,7 +4,7 @@
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
                 <vr-columns colnum="2">
-                    <vr-textbox value="txtname" label="Name" onvaluechanged="SearchRole()" customvalidate="ValidateUs1"></vr-textbox>
+                    <vr-textbox value="name" label="Name"></vr-textbox>
                 </vr-columns>
             </vr-row>
             <vr-row></vr-row>
@@ -12,7 +12,7 @@
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
-                    <vr-button type="Search" formname="formFilter" data-onclick="getData" isasynchronous=" true"></vr-button>
+                    <vr-button type="Search" formname="formFilter" data-onclick="searchClicked" isasynchronous="true"></vr-button>
                     <vr-button type="Reset" ng-show="false"></vr-button>
                     <button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewRole()">Add
                     <span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>
@@ -21,12 +21,11 @@
         </vr-row>
     </vr-form>
 
-    <div vr-loader="isGettingData">
+    <div>
         <vr-row>
             <vr-columns colnum="12" simplecol>
-                <vr-datagrid datasource="users" menuactions="gridMenuActions" maxheight="400px" loadmoredata="loadMoreData" on-ready="gridReady">
+                <vr-datagrid datasource="roles" menuactions="gridMenuActions" loadmoredata="loadMoreData" on-ready="onMainGridReady">
                     <vr-datagridcolumn headertext="'Name'" field="'Name'"></vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Status'">{{dataItem.Status == "0"? 'Not Active': 'Active' }}</vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Description'" field="'Description'"></vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
