Security Module - Role Controller - Applying Review Notes - Refactoring according to standards
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23340

--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/RoleEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/RoleEditor.html
@@ -6,7 +6,7 @@
             </vr-row>
             <vr-row>
                 <vr-label>Description:</vr-label>
-                <textarea class="form-control" ng-model="Description" />
+                <textarea class="form-control" ng-model="description" />
             </vr-row>
         </vr-form>
     </vr-modalbody>
