--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReports.html
@@ -3,14 +3,17 @@
         <div ng-hide="filterSectionCollapsed" vr-loader="isInitializing">
             <vr-row removeline>
                 <vr-columns colnum="2">
-                    <vr-datetimepicker type="date" label="From:" value="fromDate"  isrequired></vr-datetimepicker>
+                    <vr-datetimepicker type="date" label="From:" value="fromDate" isrequired></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns colnum="2">
                     <vr-datetimepicker type="date" label="To:" value="toDate" isrequired></vr-datetimepicker>
+                </vr-columns> 
+                <vr-columns colnum="2">
+                    Last : <number-filed ng-show="true" input-value="periodCount" place-holder="'Type period'" isrequired />
                 </vr-columns>
-                <!--<vr-columns colnum="2">
-                    <vr-select datasource="PeriodType" isrequired ></vr-select>
-                </vr-columns>-->
+                <vr-columns colnum="2">
+                    <vr-select datasource="PeriodType" selectedvalues="selectedPeriodType" label="" isrequired></vr-select>
+                </vr-columns>     
             </vr-row>
         </div>
     </vr-form>
@@ -24,7 +27,7 @@
             </div>
         </vr-actionbar>
     </vr-row>
-    <input type="text" ng-model="name" />
+    <!--<input type="text" ng-model="name" />-->
 
 
     <div>
@@ -61,7 +64,7 @@
         </vr-row>
     </div>
 
-    <div>
+    <!--<div>
         <vr-row>
             <vr-columns colnum="12" simplecol>
                 <vr-datagrid datasource="data" pagersettings="mainGridPagerSettings" data-on-ready="onMainGridReady">
@@ -87,4 +90,4 @@
                 </vr-datagrid>
             </vr-columns>
         </vr-row>
-    </div>
+    </div>-->
