--- a/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
+++ b/CDRAnalysis/Vanrise.Fzero.FraudAnalysis.Web/FraudAnalysis/Views/StrategyEditor.html
@@ -2,14 +2,31 @@
     <vr-modalbody width="'50%'" vr-loader="isGettingData">
         <vr-form name="formStrategyEditor">
             <vr-row>
-                <vr-columns colnum="6">
-                    <vr-textbox value="name" label="Name" ng-required="true"   ></vr-textbox> <!--customvalidate="CheckStrategyName"-->
+                <vr-columns colnum="4">
+                    <vr-textbox value="name" label="Name" ng-required="true"></vr-textbox> 
                 </vr-columns>
-                <vr-columns colnum="6">
+                <vr-columns colnum="4">
                     <vr-textbox value="description" label="Description" ng-required="true"></vr-textbox>
                 </vr-columns>
-                <vr-columns colnum="6">
+                <vr-columns colnum="4">
                     <vr-switch value="isDefault" label="Is Default"></vr-switch>
+                </vr-columns>
+
+
+
+                <vr-columns colnum="12">
+
+                 here the tabs
+
+
+
+
+
+
+
+
+
+
                 </vr-columns>
             </vr-row>
         </vr-form>
