--- a/TOneV2/Code/TOneV2/TOne.Web/Reports/Analytics/CarrierProfile.rdlc
+++ b/TOneV2/Code/TOneV2/TOne.Web/Reports/Analytics/CarrierProfile.rdlc
@@ -649,44 +649,19 @@
         <ChartSeriesHierarchy>
           <ChartMembers>
             <ChartMember>
-              <Label>Durations</Label>
+              <Label />
             </ChartMember>
           </ChartMembers>
         </ChartSeriesHierarchy>
         <ChartData>
           <ChartSeriesCollection>
-            <ChartSeries Name="Amount">
+            <ChartSeries Name="EmptySeriesName">
               <ChartDataPoints>
                 <ChartDataPoint>
-                  <ChartDataPointValues>
-                    <Y>=Count(Fields!Durations.Value)</Y>
-                  </ChartDataPointValues>
-                  <ChartDataLabel>
-                    <Style />
-                  </ChartDataLabel>
-                  <Style />
-                  <ChartMarker>
-                    <Style />
-                  </ChartMarker>
-                  <DataElementOutput>Output</DataElementOutput>
+                  <ChartDataPointValues />
                 </ChartDataPoint>
               </ChartDataPoints>
               <Style />
-              <ChartEmptyPoints>
-                <Style />
-                <ChartMarker>
-                  <Style />
-                </ChartMarker>
-                <ChartDataLabel>
-                  <Style />
-                </ChartDataLabel>
-              </ChartEmptyPoints>
-              <ValueAxisName>Primary</ValueAxisName>
-              <CategoryAxisName>Primary</CategoryAxisName>
-              <ChartSmartLabel>
-                <CalloutLineColor>Black</CalloutLineColor>
-                <MinMovingDistance>0pt</MinMovingDistance>
-              </ChartSmartLabel>
             </ChartSeries>
           </ChartSeriesCollection>
         </ChartData>
