--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
@@ -1,4 +1,24 @@
 ﻿<vr-panel ng-controller="Analytics_BillingReportsController">
-    test
+    <vr-form name="formFilter">
+        <div ng-hide="filterSectionCollapsed" vr-loader="isInitializing">
+            <vr-row removeline>
+                <vr-columns colnum="2">
+                    <vr-datetimepicker type="date" label="From:" value="fromDate" isrequired></vr-datetimepicker>
+                </vr-columns>
+                <vr-columns colnum="2">
+                    <vr-datetimepicker type="date" label="To:" value="toDate" isrequired></vr-datetimepicker>
+                </vr-columns>
+            </vr-row>
+        </div>
+    </vr-form>
+
+    <vr-row>
+        <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+
+            <div transclude-to="buttons">
+                <vr-button type="Search" formname="formFilter" data-onclick="openReport"></vr-button>
+            </div>
+        </vr-actionbar>
+    </vr-row>
 </vr-panel>
    
