--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/RoleEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/RoleEditor.html
@@ -8,6 +8,12 @@
                 <vr-label>Description:</vr-label>
                 <textarea class="form-control" ng-model="description" />
             </vr-row>
+            <vr-row>
+                <vr-label>Select Users</vr-label>
+                <vr-select ismultipleselection datasource="optionsUsers.datasource" selectedvalues="optionsUsers.selectedvalues" datatextfield="Name" datavaluefield="UserId"
+                           entityname="Users">
+                </vr-select>
+            </vr-row>
         </vr-form>
     </vr-modalbody>
     <div>
