--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/UserEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/UserEditor.html
@@ -20,7 +20,7 @@
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="Save" formname="formUserEditor" data-onclick="SaveUser" isasynchronous=" true"></vr-button>
+                <vr-button type="Save" formname="formUserEditor" data-onclick="SaveUser"></vr-button>
                 <vr-button type="Close" data-onclick="close"></vr-button>
             </div>
         </vr-actionbar>
