--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/RoleEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/RoleEditor.html
@@ -2,7 +2,7 @@
     <vr-modalbody width="'50%'" vr-loader="isGettingData">
         <vr-form name="formRoleEditor">
             <vr-row>
-                <vr-textbox value="name" label="Name"></vr-textbox>
+                <vr-textbox value="name" label="Name" isrequired></vr-textbox>
             </vr-row>
             <vr-row>
                 <vr-label>Description:</vr-label>
@@ -19,7 +19,7 @@
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="Save" formname="formRoleEditor" data-onclick="SaveRole" isasynchronous=" true"></vr-button>
+                <vr-button type="Save" formname="formRoleEditor" data-onclick="SaveRole"></vr-button>
                 <vr-button type="Close" data-onclick="close"></vr-button>
             </div>
         </vr-actionbar>
