--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
@@ -3,10 +3,16 @@
         <div ng-hide="filterSectionCollapsed" vr-loader="isInitializing">
             <vr-row removeline>
                 <vr-columns colnum="2">
-                    <vr-datetimepicker type="date" label="From:" value="fromDate" isrequired></vr-datetimepicker>
+                    <vr-select datatextfield="Name" datavaluefield="ReportDefinitionId"
+                               datasource="reportsTypes" selectedvalues="reporttype"></vr-select>
+                </vr-columns>                
+            </vr-row>
+            <vr-row removeline>
+                <vr-columns colnum="2">
+                    <vr-datetimepicker type="date" label="From:" value="fromDate" isrequired ng-if="reporttype.ParameterSettings.RequiresFromTime"></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns colnum="2" >
-                    <vr-datetimepicker type="date" label="To:" value="toDate" isrequired></vr-datetimepicker>
+                    <vr-datetimepicker type="date" label="To:" value="toDate" isrequired ng-if="reporttype.ParameterSettings.RequiresToTime"></vr-datetimepicker>
                 </vr-columns>
             </vr-row>
         </div>
@@ -16,7 +22,7 @@
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
 
             <div transclude-to="buttons">
-                <vr-button type="Search" formname="formFilter" data-onclick="openReport"></vr-button>
+                <vr-button type="Search" formname="formFilter" data-onclick="openReport" ng-if="reporttype"></vr-button>
             </div>
         </vr-actionbar>
     </vr-row>
