--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Reports/BillingReports.html
@@ -9,10 +9,10 @@
             </vr-row>
             <vr-row removeline>
                 <vr-columns colnum="2">
-                    <vr-datetimepicker type="date" label="From:" value="fromDate" isrequired ng-if="reporttype.ParameterSettings.RequiresFromTime"></vr-datetimepicker>
+                    <vr-datetimepicker type="date" label="From:" value="params.fromDate" isrequired ng-if="reporttype.ParameterSettings.RequiresFromTime"></vr-datetimepicker>
                 </vr-columns>
                 <vr-columns colnum="2" >
-                    <vr-datetimepicker type="date" label="To:" value="toDate" isrequired ng-if="reporttype.ParameterSettings.RequiresToTime"></vr-datetimepicker>
+                    <vr-datetimepicker type="date" label="To:" value="params.toDate" isrequired ng-if="reporttype.ParameterSettings.RequiresToTime"></vr-datetimepicker>
                 </vr-columns>
             </vr-row>
         </div>
