--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
@@ -42,19 +42,19 @@
                 </div>
                 <div ng-repeat="item in menuItems" class="panel panel-default menu-item-list">
                     <div class="panel-heading hand-cursor dll-menu boxes float-box waves-effect waves-float waves-block" data-toggle="collapse" data-parent="#accordion" data-target="#collapse-{{$index}}" aria-expanded="true" aria-controls="collapse-{{$index}}" ng-click="setIndex($index,$event)">
-                        <span ng-if="item.childs.length > 0">
-                            <span class="glyphicon " ng-class="item.icon" style="font-size: 20px; top: 4px;"></span>
-                            <span>{{item.name}} </span>
+                        <span ng-if="item.Childs.length > 0">
+                            <span class="glyphicon " ng-class="item.Icon" style="font-size: 20px; top: 4px;"></span>
+                            <span>{{item.Name}} </span>
                             <span class=" hand-cursor  toggel">
 
-                                <span ng-if="item.childs.length>0" class="glyphicon glyphicon" ng-class=" menuItemsCurrent == {{$index}} ? 'glyphicon-minus':'glyphicon-plus'" style="font-size: 10px; top: 10px;"></span>
+                                <span ng-if="item.Childs.length>0" class="glyphicon glyphicon" ng-class=" menuItemsCurrent == {{$index}} ? 'glyphicon-minus':'glyphicon-plus'" style="font-size: 10px; top: 10px;"></span>
 
                             </span>
                         </span>
 
-                        <ul class="nav" ng-if="item.childs.length == 0" data-toggle="collapse" data-parent="#accordion">
-                            <li class="dll-menu menu-item-list-ligth" ng-repeat="c in item.childs">
-                                <a class="menulink  " ng-href="{{item.location}}">{{item.name}}</a>
+                        <ul class="nav" ng-if="item.Childs.length == 0" data-toggle="collapse" data-parent="#accordion">
+                            <li class="dll-menu menu-item-list-ligth" ng-repeat="c in item.Childs">
+                                <a class="menulink  " ng-href="{{item.Location}}">{{item.Name}}</a>
                             </li>
                         </ul>
 
@@ -62,17 +62,17 @@
 
                     </div>
 
-                    <div id="collapse-{{$index}}" ng-if="item.childs.length>0" class="panel-collapse collapse " role="tabpanel" aria-labelledby="collapse-{{$index}}">
+                    <div id="collapse-{{$index}}" ng-if="item.Childs.length>0" class="panel-collapse collapse " role="tabpanel" aria-labelledby="collapse-{{$index}}">
                         <div class="panel-body ">
                             <ul class="nav">
-                                <li ng-if="c.childs == undefined" class="waves-effect waves-classic dll-menu menu-item-list-ligth " ng-click="setActiveClass($event,item , c) ;  " ng-repeat="c in item.childs">
-                                    <a class=" menulink" ng-click="setIndexSub($index,$event)" ng-href=" {{c.location}}">{{c.name}}</a>
+                                <li ng-if="c.Childs == undefined" class="waves-effect waves-classic dll-menu menu-item-list-ligth " ng-click="setActiveClass($event,item , c) ;  " ng-repeat="c in item.Childs">
+                                    <a class=" menulink" ng-click="setIndexSub($index,$event)" ng-href=" {{c.Location}}">{{c.Name}}</a>
                                 </li>
-                                <li ng-if="c.childs != undefined" class="waves-effect waves-classic dll-menu menu-item-list-ligth "  ng-repeat="c in item.childs">
-                                    <a class=" menulink " ng-class="menusubItemsCurrent == $index ? 'down':''" ng-click="setIndexSub($index,$event)" ng-href="">{{c.name}}</a>
+                                <li ng-if="c.Childs != undefined" class="waves-effect waves-classic dll-menu menu-item-list-ligth " ng-repeat="c in item.Childs">
+                                    <a class=" menulink " ng-class="menusubItemsCurrent == $index ? 'down':''" ng-click="setIndexSub($index,$event)" ng-href="">{{c.Name}}</a>
                                     <ul style="padding-left:15px" class="nav" ng-show="menusubItemsCurrent == $index">
-                                        <li ng-repeat="a in c.childs">
-                                            <a class=" menulink" style="color:#333;" ng-href="{{a.location}}">{{a.name}}</a>
+                                        <li ng-repeat="a in c.Childs">
+                                            <a class=" menulink" style="color:#333;" ng-href="{{a.Location}}">{{a.Name}}</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div ng-repeat="item in menuItems" class="dropdown dropdown-custom-serf leftdiv " ng-mouseenter="showMenu($event)" ng-mouseleave="hideMenu($event)">
-                    <div class="dropdown-toggle hand-cursor glyphicon " ng-class="item.icon" style="font-size:20px;margin:0px 4px" id="dropdownMenuCu-{{$index}}" aria-expanded="true" data-toggle="dropdown">
+                    <div class="dropdown-toggle hand-cursor glyphicon " ng-class="item.Icon" style="font-size:20px;margin:0px 4px" id="dropdownMenuCu-{{$index}}" aria-expanded="true" data-toggle="dropdown">
 
                     </div>
                     <ul class="dropdown-menu dropdown-menu-custom-serf" role="menu" aria-labelledby="dropdownMenuCu-{{$index}}">
@@ -97,16 +97,16 @@
 
                             <label class="titel-groupe"> {{item.name}}</label>
                         </li>
-                        <li ng-if="c.childs == undefined" role="presentation" class="innerlist" ng-repeat="c in item.childs">
+                        <li ng-if="c.Childs == undefined" role="presentation" class="innerlist" ng-repeat="c in item.Childs">
 
-                            <a ng-href="{{c.location}}" ng-click="setActiveClass(null,item , c);setIndexSub($index,$event)">{{c.name}}</a>
+                            <a ng-href="{{c.Location}}" ng-click="setActiveClass(null,item , c);setIndexSub($index,$event)">{{c.Name}}</a>
 
                         </li>
-                        <li ng-if="c.childs != undefined" class="innerlist" ng-repeat="c in item.childs">
+                        <li ng-if="c.Childs != undefined" class="innerlist" ng-repeat="c in item.Childs">
                             <a ng-class="menusubItemsCurrent == $index ? 'down':''" ng-click="$event.preventDefault();$event.stopPropagation();setIndexSub($index,$event) ; setActiveClass(null,item , c);" href="">{{c.name}}</a>
-                            <ul class="nav"  ng-show="menusubItemsCurrent == $index">
-                                <li ng-repeat="a in c.childs" class="innerlist">
-                                    <a class="menulink" style="padding:0px 0px 0px 30px !important ; color:#333" ng-href="{{a.location}}">{{a.name}}</a>
+                            <ul class="nav" ng-show="menusubItemsCurrent == $index">
+                                <li ng-repeat="a in c.Childs" class="innerlist">
+                                    <a class="menulink" style="padding:0px 0px 0px 30px !important ; color:#333" ng-href="{{a.Location}}">{{a.Name}}</a>
                                 </li>
                             </ul>
                         </li>
@@ -126,8 +126,8 @@
                     <div class="col-lg-12">
                         <ol class="breadcrumb breadcrumb-vr">
                             <li><a href="#/default">Home</a></li>
-                            <li ng-show="parent!=null"><a href="">{{parent.name}}</a></li>
-                            <li class="active" ng-show="child!=null">{{child.name}}</li>
+                            <li ng-show="parent!=null"><a href="">{{parent.Name}}</a></li>
+                            <li class="active" ng-show="child!=null">{{child.Name}}</li>
                         </ol>
 
                     </div>
@@ -142,10 +142,10 @@
 
                         </div>
                         <div class="panel-body am-slide-top" ng-show="showHip">
-                            <vr-row removeline>                                
+                            <vr-row removeline>
                                 <div ng-if="hisnav.length > 0 ">
                                     <div ng-repeat="h in hisnav">
-                                        <button class="btn-link" ng-click="hidesubview(h.name,$index)">{{h.name}}</button>
+                                        <button class="btn-link" ng-click="hidesubview(h.name,$index)">{{h.Name}}</button>
                                     </div>
                                     <span class="glyphicon glyphicon-circle-arrow-left pull-right hand-cursor" ng-click="hidesubview(hisnav[hisnav.length-1].name,hisnav.length-1)"></span>
                                 </div>
@@ -170,7 +170,7 @@
 
 
     </div>
-   
+
 
 
 
