--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/TopManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/TopManagementDashboard.html
@@ -1,4 +1,4 @@
-﻿<vr-panel>
+﻿<vr-panel ng-controller="TopManagementDashboardController">
     <div class="am-collapse" ng-hide="filterSectionCollapsed" ng-init="filterSectionCollapsed=true">
         <vr-form name="filterForm">
             <vr-row removeline>
@@ -31,16 +31,16 @@
         <vr-row>
             <vr-columns colnum="12" simplecol>
                 <vr-section title="Sale / Cost / Profit">
-                        <vr-chart data-on-ready="chartSaleCostProfitReady"></vr-chart>
+                    <vr-chart data-on-ready="chartSaleCostProfitReady"></vr-chart>
                 </vr-section>
             </vr-columns>
         </vr-row>
         <vr-row>
             <vr-columns colnum="12" simplecol>
                 <vr-section title="Profit">
-                        <vr-chart data-on-ready="chartProfitReady"></vr-chart>
+                    <vr-chart data-on-ready="chartProfitReady"></vr-chart>
                 </vr-section>
             </vr-columns>
         </vr-row>
-    </div>   
+    </div>
 </vr-panel>
