Security Module - Adding controllers to Views after menu changes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23448

--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/Management/RouteManager.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Routing/Views/Management/RouteManager.html
@@ -1,4 +1,4 @@
-﻿<vr-panel>
+﻿<vr-panel ng-controller="RouteManagerController">
     <vr-row>
         <form ng-hide="filterSectionCollapsed">
             <vr-columns colnum="2" simplecol>
